--- a/public/stylesheets/orders.css
+++ b/public/stylesheets/orders.css
@@ -3,7 +3,7 @@ body {
 }
 
 #container {
-    padding: 15px 15px 15px 20px;
+    padding: 20px 15px 15px 20px;
     color: #252525;
     margin: auto;
     min-width: 725px;
