--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body{
   font-family: Arial,Helvetica,sans-serif;
   margin: 0;
-  background-color: #888888;
+  background-color: white;
 }
 
 #main-content {
